#-
# Copyright (C) 2011  Oy L M Ericsson Ab, NomadicLab
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License version 3 as
# published by the Free Software Foundation.
#
# See LICENSE and COPYING for more details.
#

SUBDIRS = 

if SWIG_PYTHON
    SUBDIRS += python
endif

if SWIG_RUBY
    SUBDIRS += ruby
endif

if SWIG_JAVA
    SUBDIRS += java
endif
